--- a/algorithm paper.lyx
+++ b/algorithm paper.lyx
@@ -53,7 +53,7 @@
 \color #008000
 \end_index
 \leftmargin 2cm
-\topmargin 3cm
+\topmargin 2cm
 \rightmargin 2cm
 \bottommargin 2cm
 \secnumdepth 3
@@ -138,6 +138,13 @@ LatexCommand tableofcontents
 
 \end_layout
 
+\begin_layout Standard
+\begin_inset Newpage newpage
+\end_inset
+
+
+\end_layout
+
 \begin_layout Section
 First Considerations
 \end_layout
@@ -152,7 +159,11 @@ There is a strong link between GI and algebra : finding an isomorphism is
 \end_inset
 
  operations.
- The GI problem lies between the complexity classes P and NP and Schöning
+ 
+\end_layout
+
+\begin_layout Standard
+The GI problem lies between the complexity classes P and NP and Schöning
  
 \begin_inset CommandInset citation
 LatexCommand cite
@@ -234,7 +245,7 @@ At each pass, the color of each vertex is determined by the number of neighbours
 
 \begin_layout Itemize
 After at most n passes, the colors don't change anymore.
- We then make one random choice and use backtracking before coloring again.
+ We then make one random choice before coloring again, using backtracking.
  
 \end_layout
 
@@ -306,12 +317,19 @@ Let
 \end_inset
 
  we can prune the search tree and limit the possibilities.
- We name the array of couples 
+ We name 
+\begin_inset Formula $PN(x)$
+\end_inset
+
+ the array of couples 
 \begin_inset Formula $P_{k}(x),N_{k}(x)$
 \end_inset
 
- for k between 1 and n PN(x), and compute an array containing PN(x) for
- each x, obtaining the PN arrays.
+ for k between 1 and n, and compute an array containing 
+\begin_inset Formula $PN(x)$
+\end_inset
+
+ for each x, obtaining the PN arrays.
  
 \end_layout
 
@@ -358,7 +376,11 @@ We keep a list of equivalence classes for the vertices of both graphs.
  Each information we gather with the different tests allows us to refine
  the separation into classes, and when they are not compatible to produce
  a certificate of non-isomorphism.
- Every class of cardinal c has at most 
+ Every class of cardinal 
+\begin_inset Formula $c$
+\end_inset
+
+ has at most 
 \begin_inset Formula $c!$
 \end_inset
 
@@ -390,7 +412,7 @@ The problem with the naive algorithm is that the number of possibilities
 \begin_inset Formula $n^{2}$
 \end_inset
 
-possibilities and each take at most 
+ possibilities and each take at most 
 \begin_inset Formula $m$
 \end_inset
 
@@ -476,8 +498,8 @@ key "Wormwald:UniformGeneration"
 
 \end_inset
 
-, so we restricted ourselves to those three models, as our algorithm should
- work as well on multigraphs as on normal graphs.
+, so we mostly restricted ourselves to those three models, as our algorithm
+ should work as well on multigraphs as on normal graphs.
  
 \end_layout
 
@@ -493,6 +515,10 @@ To generate two isomorphic graphs is actually really easy : as two graphs
  We generate those from all three different models of random graphs already
  implemented.
  
+\begin_inset Newpage newpage
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsection
@@ -502,8 +528,8 @@ Performance
 \begin_layout Standard
 \paragraph_spacing single
 We checked the performance of PN on the three types of non-isomorphic graphs
- and here are the results, including parsing time (On an intel core i7 2.3Ghz
- with ubuntu 12.10)
+ and here are the results (time in seconds), including parsing time (On
+ an intel core i7 2.3Ghz with ubuntu 12.10)
 \end_layout
 
 \begin_layout Standard
@@ -1971,7 +1997,7 @@ k-regular
 \begin_inset Text
 
 \begin_layout Plain Layout
-time*
+time
 \end_layout
 
 \end_inset
@@ -2029,7 +2055,7 @@ time*
 \begin_inset Text
 
 \begin_layout Plain Layout
-0.026
+0.026*
 \end_layout
 
 \end_inset
@@ -2173,7 +2199,7 @@ status open
 
 \begin_layout Standard
 \paragraph_spacing single
-The running time in the k-regular case varies a lot (the 100-4 once took
+The running time in the k-regular case varies a lot (the * case once took
  about 6s).
  PN proved indeed useful as it reduces drastically the number of possibilities
  around the fifth multiplication.
@@ -2482,7 +2508,7 @@ The biggest problem was that the numbers in the PN matrix quickly grow out
 \begin_inset Formula $n^{n}$
 \end_inset
 
- but this bound might be reached), so one has to to multiplication modulo
+ but this bound might be reached), so one has to use multiplication modulo
  p, and we chose a prime number p close to 
 \begin_inset Formula $2^{61}$
 \end_inset
@@ -2504,6 +2530,13 @@ The biggest problem was that the numbers in the PN matrix quickly grow out
 The sorting was also source of problems because manual implementations behave
  quite slower than the ones included in the libraries so we used qsort_r
  to increase performance, which is not a standard function.
+ 
+\end_layout
+
+\begin_layout Standard
+Finally, we had to use some goto in the code, to be sure to free the memory.
+ One could implement PN without them, but it would necessitate changing
+ the whole control flow.
  
 \end_layout
 
@@ -2533,6 +2566,10 @@ As with many graph algorithms, PN can be improved by using adjacency lists
  However we took care of memory locality in their representation, which
  might improve the performance in practice.
  
+\begin_inset Newpage newpage
+\end_inset
+
+
 \end_layout
 
 \begin_layout Subsection
@@ -2606,6 +2643,41 @@ close
 A very efficient Strassen multiplication might also be useful, mostly if
  we want to run PN on bigger graphs.
  
+\end_layout
+
+\begin_layout Subsection
+Files and usage
+\end_layout
+
+\begin_layout Standard
+All the files can be found at
+\begin_inset CommandInset href
+LatexCommand href
+target " http://github.com/koliaza/Heuristitique"
+
+\end_inset
+
+.
+ The files can be separated into three categories (plus the pdf and tex
+ files) : 
+\end_layout
+
+\begin_layout Itemize
+Basic functions : io.c, util.c, matrix_mod.c, partitions.c
+\end_layout
+
+\begin_layout Itemize
+Graph functions : graph.c, random_graph.c, pn_heuristic.c
+\end_layout
+
+\begin_layout Itemize
+Global functions : main.c, test_gen.c
+\end_layout
+
+\begin_layout Standard
+Commands : one uses main, with the option --verbose, on either two filenames
+ or a directory (for k graphs).
+ test_gen can be called with no arguments to see the exact syntax.
 \end_layout
 
 \begin_layout Standard
